# Lily58-Firmware

left-stm32/: Cargo.toml
left-stm32/.cargo/: config.toml
left-stm32/src/: main.rs
left-stm32f1/: Cargo.toml  uploader_gui.py
left-stm32f1/examples/: serial.rs  usb.rs
left-stm32f1/src/: fixed_vec.rs  layouts_def.rs  main.rs
right-esp32/: Cargo.toml
right-stm32f4/: Cargo.toml
right-stm32f4/.cargo/: config.toml
right-stm32f4/src/: main.rs
shared-src/: Cargo.toml
shared-src/examples/: dev.rs
shared-src/src/: lib.rs
