[package]
name = "left-stm32f1"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
overflow-checks = false

[dependencies]
embedded-hal = "1.0.0"
nb = "1"
cortex-m-rt = "0.7.1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-reset = "0.1.1"
rtt-target = {version = "0.6.1"}
cortex-m-semihosting = "0.5.0"
usb-device = "0.3"
usbd-human-interface-device = "0.6.0"
stm32-usbd = "0.7.0"
usbd-serial = "0.2.2"
#panic-semihosting = "0.6.0"
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = [
  "stm32f103",
  "medium",
] }
shared-src = {path = "../shared-src"}

[[bin]]
name = "left-stm32f1"
path = "src/main.rs"
test = false
doctest = false
bench = false



# [dependencies.stm32f1xx-hal]
# version = "0.10.0"
# features = ["rt", "stm32f103", "medium"]
