[package]
name = "right-stm32f1"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
embedded-hal = "1.0.0"
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "1.0.0"
#panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
#rtt-target = {version = "0.6.1"}
cortex-m-semihosting = "0.5.0"
stm32f4xx-hal = {version = "0.22.0", features = ["stm32f401"]}
shared-src = {path = "../shared-src"}

[[bin]]
name = "right-stm32f1"
test = false